--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <%-include('../partials/header') %>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,13 +11,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>SignUp</title>
+        <title>Ticket</title>
 </head>
 
 <body> 
+    
     <%-include('../partials/navlogged') %>
-    <div class="jumbotron">
-        <div class="card shadow mb-4 my-2 mx-auto" style="max-width: 700px;">
+    <div class="jumbotron" style="background-image: url('../img/metro4.jpg');background-repeat: no-repeat; background-size: cover; padding: 20px;">
+        <div class="card shadow mb-4 my-2 mx-auto" style="max-width: 800px;">
             <div class="card-header py-3">
                 <h3 class="p-3 mb-2 bg-success text-white text-center">Welcome to SMetro. Here is your ticket.</h3><br>
                 <img src="../img/train.png" class="d-block mx-auto" height="100" width="150" alt="Responsive image"><br>
@@ -49,7 +51,13 @@
                     <div class="col-8"><h4><%=results.rows[0].arrivaltime%></h4></div>
                 </div>
             </div>
+            <div class="alert alert-warning mb-3">
+                <strong>Warning:</strong> 
+                Effective immediately, train station passengers are reminded that the maximum allowed stay is 2 hours after entry. 
+                Subsequent hours will incur a charge of 100 taka per hour. Thank you for your cooperation
+            </div>
             <div class="card-body">
+                
                 <div class="text-center">
                     <img src="../img/qr.png" class="mx-auto" height="500" width="500" alt="Responsive image">
                 </div>
@@ -59,6 +67,7 @@
         </div>
     </div>
     
+    <%-include('../partials/footer') %>
     
     
     
