admin page semi merged

--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -11,6 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Admin Dashboard</title>
+    <%-include('../partials/header') %>
 </head>
 
 <body>
@@ -18,10 +19,6 @@
 
     <div class="container my-4">
         <div class="jumbotron">
-            <a href="/admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
-            <a href="/admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
-            <a href="/admin/stuckpassengers"><button type="button" class="btn btn-secondary my-2">Stuck Passengers</button></a>
-            <a href="../admin/addbalance"><button type="button" class="btn btn-secondary my-2">Add Balance</button></a>
 
             <h1 class="text-center">Add route fare</h1>
             <form action="/admin/addroute" method="post">
@@ -111,6 +108,7 @@
 
     </div>
 
+    <%-include('../partials/footer') %>
     
 
     
