--- a/smetro/views/admin/addtrain.ejs
+++ b/smetro/views/admin/addtrain.ejs
@@ -11,6 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Add Train</title>
+    <%-include('../partials/header') %>
 </head>
 
 <body>
@@ -18,13 +19,6 @@
 
     <div class="container my-4">
         <div class="jumbotron">
-            <a href="/admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
-            <a href="/admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
-            <a href="/admin/stuckpassengers"><button type="button" class="btn btn-secondary my-2">Stuck Passengers</button></a> 
-            <a href="/admin/addbalance"><button type="button" class="btn btn-secondary my-2">addbalance</button></a>
-
-
-            
             <h1 class="text-center">Add a train</h1>
             <form action="/admin/addtrain" method="post">
     
@@ -154,6 +148,7 @@
     
 
 
+    <%-include('../partials/footer') %>
 
 
     
